@@ -1,4 +1,5 @@
-EXTRA_DIST = *.h po/* doc/*
+EXTRA_DIST = *.h po/* 
+#doc/*
 
 AM_CXXFLAGS= -I$(top_srcdir)/src -fPIC -DPIC
 AM_LDFLAGS= -shared -module
